<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quest2Activity">

    <TextView
        android:id="@+id/quest_2_view"
        android:layout_width="311dp"
        android:layout_height="121dp"
        android:layout_marginTop="164dp"
        android:text="@string/question_2"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_2"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quest_2_view">

        <RadioButton
            android:id="@+id/q_2_rad_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="cat" />

        <RadioButton
            android:id="@+id/q_2_rad_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dog" />

        <RadioButton
            android:id="@+id/q_2_rad_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hippo" />

        <RadioButton
            android:id="@+id/q_2_rad_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="human" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_2" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreDisplay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreView" />

</androidx.constraintlayout.widget.ConstraintLayout>