<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quest3Activity">

    <TextView
        android:id="@+id/quest_3_view"
        android:layout_width="312dp"
        android:layout_height="78dp"
        android:layout_marginTop="172dp"
        android:text="@string/question_3"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_3"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quest_3_view">

        <RadioButton
            android:id="@+id/q_3_rad_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="5" />

        <RadioButton
            android:id="@+id/q_3_rad_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="9" />

        <RadioButton
            android:id="@+id/q_3_rad_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="7" />

        <RadioButton
            android:id="@+id/q_3_rad_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="11" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_3" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreDisplay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreView" />

</androidx.constraintlayout.widget.ConstraintLayout>